--- a/ansible/templates/ec2ExistEnv.template
+++ b/ansible/templates/ec2ExistEnv.template
@@ -1,7 +1,6 @@
 # ec2ExistEnv.template
 export EXIST_HOME={{ existLn }}
-# why can't I use $JAVA_HOME directly - try this again
-PATH=$PATH:{{ java_home }}/bin
+PATH=$PATH:{{ actualJavaHome.stdout }}/bin
 export PATH
 alias exist-start='sudo /usr/local/bin/exist start'
 alias exist-stop='sudo /usr/local/bin/exist stop'
