--- a/ansible/templates/ec2ExistEnv.template
+++ b/ansible/templates/ec2ExistEnv.template
@@ -5,3 +5,6 @@ export PATH
 alias exist-start='sudo /usr/local/bin/exist start'
 alias exist-stop='sudo /usr/local/bin/exist stop'
 alias exist-status='sudo /usr/local/bin/exist status'
+# set exist to start on reboot
+# don't do this if it exists already
+ln -s $EXIST_HOME/tools/wrapper/bin/exist.sh /etc/init.d/exist
